--- a/src/app/[locale]/_components/LanguageSwitcher/_LanguageSwitcher.scss
+++ b/src/app/[locale]/_components/LanguageSwitcher/_LanguageSwitcher.scss
@@ -2,7 +2,7 @@
   position: relative;
   display: inline-block;
   padding: 20px 20px 20px;
-  
+
   .switcher-button {
     border: 2px solid transparent;
     background: none;
@@ -55,7 +55,7 @@
       border-right: 1px solid transparent;
       border-bottom: 1px solid var(--border-color);
       @include adjust-font(14px, false);
-      font-family: var(--lato-font-family);
+      font-family: var(--lara-font-family);
       cursor: pointer;
       color: var(--light-text-color);
       display: block;
@@ -64,7 +64,11 @@
       letter-spacing: 2px;
       font-weight: 500;
       &:hover {
-        background: linear-gradient(262deg, rgb(172, 131, 109) 28%, rgb(240, 202, 178) 70%);
+        background: linear-gradient(
+          262deg,
+          rgb(172, 131, 109) 28%,
+          rgb(240, 202, 178) 70%
+        );
         border-left: 1px solid var(--border-color);
         border-right: 1px solid var(--border-color);
         color: white;
@@ -72,11 +76,11 @@
     }
   }
 }
-  
-  /* RTL Adjustments */
-  [dir="rtl"] .language-switcher {
-    .switcher-dropdown {
-      right: auto;
-      left: 0;
-    }
+
+/* RTL Adjustments */
+[dir="rtl"] .language-switcher {
+  .switcher-dropdown {
+    right: auto;
+    left: 0;
   }
+}
