--- a/src/app/[locale]/(dubai)/[offeringType]/_component/_mainpage.scss
+++ b/src/app/[locale]/(dubai)/[offeringType]/_component/_mainpage.scss
@@ -1,26 +1,26 @@
 .subheading {
-    margin-top: 1rem;
-    margin-bottom: 3rem;
-    color: white;
-    @include adjust-font(18px, false);
-    font-family: var(--lato-font-family);
-    font-weight: 300;
-    line-height: 1.5rem;
-    text-align: center;
-    text-transform: uppercase;
+  margin-top: 1rem;
+  margin-bottom: 3rem;
+  color: white;
+  @include adjust-font(18px, false);
+  font-family: var(--lara-font-family);
+  font-weight: 300;
+  line-height: 1.5rem;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 @media all and (max-width: 576px) {
-    .subheading {
-        @include adjust-font(18px, false);
-        text-align: left;
-        margin-bottom: 2rem;
-        &.ar {
-            text-align: right;
-        }
+  .subheading {
+    @include adjust-font(18px, false);
+    text-align: left;
+    margin-bottom: 2rem;
+    &.ar {
+      text-align: right;
     }
+  }
 
-    .heading {
-        // text-align: left !important;
-    }
+  .heading {
+    // text-align: left !important;
+  }
 }
