--- a/src/app/[locale]/_components/ContactAgentForm/_contactAgentForm.scss
+++ b/src/app/[locale]/_components/ContactAgentForm/_contactAgentForm.scss
@@ -75,19 +75,19 @@ div.contactAgentForm {
             @media all and (max-width: 992px) {
               width: 100%;
             }
-          &.noPadding{
-            padding-bottom:0 ;
-          }
-          select{
-            width: 100%;
-            background-color: transparent;
-            border: none;
-            color: var(--text-color);
-            @include adjust-font(16px, false);
-          }
-          &.error{
-            border-color: var(--error-color);
-          }
+            &.noPadding {
+              padding-bottom: 0;
+            }
+            select {
+              width: 100%;
+              background-color: transparent;
+              border: none;
+              color: var(--text-color);
+              @include adjust-font(16px, false);
+            }
+            &.error {
+              border-color: var(--error-color);
+            }
 
             // @media all and (max-width: 640px) {
             //   width: 100%;
@@ -103,16 +103,16 @@ div.contactAgentForm {
               @include adjust-font(14px, false);
               text-transform: uppercase;
             }
-            span.errorIcon{
-                position: absolute;
-                right: 0;
-                transform: translateX(0);
-                animation: zoomIn 0.6s ease-in-out;
-                svg{
-                  width: 20px !important;
-                  height: 20px !important;
-                }
+            span.errorIcon {
+              position: absolute;
+              right: 0;
+              transform: translateX(0);
+              animation: zoomIn 0.6s ease-in-out;
+              svg {
+                width: 20px !important;
+                height: 20px !important;
               }
+            }
             span.icon {
               display: inline-block;
               margin-left: 10px;
@@ -181,11 +181,11 @@ div.contactAgentForm {
               letter-spacing: 1.6px;
               @include adjust-font(14px, false);
               text-transform: uppercase;
-              font-family: var(--lato-font-family);
+              font-family: var(--lara-font-family);
             }
             &.ar {
               &::placeholder {
-                letter-spacing: normal
+                letter-spacing: normal;
               }
             }
           }
