--- a/src/app/[locale]/_components/SubscribeNewsletter/_subscribeNewsletter.scss
+++ b/src/app/[locale]/_components/SubscribeNewsletter/_subscribeNewsletter.scss
@@ -8,114 +8,112 @@ div.subscribeContainer {
     line-height: 2em;
     max-width: 50%;
     margin: 0 auto 20px;
-    @media all and (max-width:980px){
-       max-width: 100%;
-         }
+    @media all and (max-width: 980px) {
+      max-width: 100%;
+    }
     br {
     }
   }
 
   div.subscribeForm {
-   
     width: 100%;
     padding: 90px 40px 80px;
     align-items: flex-end;
     margin: 0 auto;
-    div.oneRow{
-        display: flex;
+    div.oneRow {
+      display: flex;
     }
     @media all and (max-width: 980px) {
       flex-wrap: wrap;
     }
     @media all and (max-width: 980px) {
-        padding: 40px;
-      }
+      padding: 40px;
+    }
     @media all and (max-width: 480px) {
-        padding: 20px;
+      padding: 20px;
+    }
+    div.oneRow {
+      display: flex;
+      margin-bottom: 30px;
+      @media all and (max-width: 1050px) {
+        flex-wrap: wrap;
       }
-      div.oneRow {
+      @media all and (max-width: 980px) {
+        margin-bottom: 0;
+        &.bottomRow {
+          flex-direction: column;
+        }
+      }
+      &:last-child {
+        margin-bottom: 0;
+      }
+      div.inputContainer {
+        margin-right: 30px;
+        width: 23%;
         display: flex;
-        margin-bottom: 30px;
-        @media all and (max-width: 1050px) {
-          flex-wrap: wrap;
+        align-items: center;
+        cursor: pointer;
+        position: relative;
+        &.ar {
+          margin-right: unset;
+          margin-left: 30px;
         }
-        @media all and (max-width: 980px) {
-          margin-bottom: 0;
-          &.bottomRow{
-            flex-direction: column;
+        &.top {
+          @media all and (max-width: 980px) {
+            width: 46%;
+            margin-bottom: 30px;
+          }
+          @media all and (max-width: 640px) {
+            width: 45%;
+          }
+          @media all and (max-width: 480px) {
+            width: 100%;
+          }
+          &:last-child {
+            margin-right: 0;
           }
         }
-        &:last-child {
-          margin-bottom: 0;
+        &.bottom {
+          @media all and (max-width: 1200px) {
+            margin-bottom: 30px;
+            margin-right: 22px;
+            width: 30%;
+            &.ar {
+              margin-right: unset;
+            }
+          }
+          @media all and (max-width: 980px) {
+            width: 100%;
+          }
         }
-        div.inputContainer {
-          margin-right: 30px;
-          width: 23%;
-          display: flex;
-          align-items: center;
-          cursor: pointer;
-          position: relative;
-          &.ar {
-            margin-right: unset;
-            margin-left: 30px;
+        span.specialization {
+          color: var(--placeholder-color);
+          @include adjust-font(14px, false);
+          text-transform: uppercase;
+        }
+        span.errorIcon {
+          position: absolute;
+          right: 0;
+          transform: translateX(0);
+          animation: zoomIn 0.6s ease-in-out;
+          svg {
+            width: 20px !important;
+            height: 20px !important;
           }
-          &.top{
-            @media all and (max-width: 980px) {
-              width: 46%;
-              margin-bottom: 30px;
-            }
-             @media all and (max-width: 640px) {
-              width: 45%;
-             }
-             @media all and (max-width: 480px) {
-              width: 100%;
-             }
-            &:last-child {
-              margin-right: 0;
-            }
-
-          }
-          &.bottom{
-            @media all and (max-width:1200px){
-              margin-bottom: 30px;
-              margin-right: 22px;
-              width: 30%;
-              &.ar {
-                margin-right: unset;
-              }
-            }
-            @media all and (max-width: 980px) {
-              width: 100%
-            }
-          }
-          span.specialization {
-            color: var(--placeholder-color);
-            @include adjust-font(14px, false);
-            text-transform: uppercase;
-          }
-          span.errorIcon{
-            position: absolute;
-            right: 0;
-            transform: translateX(0);
-            animation: zoomIn 0.6s ease-in-out;
-            svg{
-              width: 20px !important;
-              height: 20px !important;
-            }
-          }
-          span.icon {
-            display: inline-block;
-            margin-left: 10px;
-            svg {
-              width: 10px !important;
-              height: 10px !important;
-              path {
-                stroke: var(--placeholder-color);
-              }
+        }
+        span.icon {
+          display: inline-block;
+          margin-left: 10px;
+          svg {
+            width: 10px !important;
+            height: 10px !important;
+            path {
+              stroke: var(--placeholder-color);
             }
           }
         }
       }
+    }
     input {
       width: 100%;
       display: block;
@@ -125,13 +123,13 @@ div.subscribeContainer {
       caret-color: #fff;
       color: var(--text-color);
       @include adjust-font(16px, false);
-      &.error{
+      &.error {
         border-color: var(--error-color);
       }
       &::placeholder {
         letter-spacing: 1.6px;
         @include adjust-font(14px, false);
-        font-family: var(--lato-font-family);
+        font-family: var(--lara-font-family);
       }
       &.ar {
         &::placeholder {
@@ -139,27 +137,26 @@ div.subscribeContainer {
         }
       }
     }
-    button{
-        @media all and (max-width:768px){
-            width: 100%;
-            }
+    button {
+      @media all and (max-width: 768px) {
+        width: 100%;
+      }
     }
-
   }
-  @keyframes zoomIn{
-    0%{
+  @keyframes zoomIn {
+    0% {
       transform: scale(0);
     }
-    30%{
+    30% {
       transform: scale(2);
     }
-    50%{
-      transform: scale(1) ;
+    50% {
+      transform: scale(1);
     }
-    60%{
-      transform:ranslateX(20px);
+    60% {
+      transform: ranslateX(20px);
     }
-    80%{
+    80% {
       transform: translateX(-10px);
     }
   }
@@ -174,7 +171,7 @@ div.subscribeContainer {
   }
   .custom-phone-input.error {
     .PhoneInputInput {
-        border-bottom: 1px solid var(--error-color) !important;
+      border-bottom: 1px solid var(--error-color) !important;
     }
     .PhoneInputCountry {
       border-bottom: 1px solid var(--error-color) !important;
