--- a/src/app/[locale]/areas-and-communities/[slug]/_community.scss
+++ b/src/app/[locale]/areas-and-communities/[slug]/_community.scss
@@ -1,4 +1,3 @@
-
 .community {
   ._title {
     color: white;
@@ -15,7 +14,7 @@
   background-size: 100%;
 
   .__title {
-    color: #FFF;
+    color: #fff;
     text-align: center;
     font-family: var(--audrey-font-family);
     @include adjust-font(30px, false);
@@ -42,9 +41,9 @@
 }
 
 .__subtitle {
-  color: #FFF;
+  color: #fff;
   text-align: center;
-  font-family: var(--lato-font-family);
+  font-family: var(--lara-font-family);
   @include adjust-font(16px, false);
   font-style: normal;
   font-weight: 300;
@@ -84,7 +83,6 @@
         align-self: flex-start;
         height: calc(100vh - 100px);
       }
-
     }
   }
 }
@@ -131,14 +129,13 @@
 }
 
 @media (max-width: 576px) {
-
   .similarPropertyComponentHeading {
     text-align: left !important;
     &.ar {
       text-align: right !important;
     }
   }
-  
+
   .similarPropertyComponentSubheading {
     text-align: left !important;
     &.ar {
@@ -157,4 +154,3 @@
     text-align: left;
   }
 }
-
