--- a/src/app/[locale]/areas-and-communities/_areasAndCommunities.scss
+++ b/src/app/[locale]/areas-and-communities/_areasAndCommunities.scss
@@ -12,7 +12,7 @@
     margin-bottom: 3rem;
 
     .title {
-      color: #FFF;
+      color: #fff;
       text-align: center;
       font-family: var(--audrey-font-family);
       @include adjust-font(30px, false);
@@ -25,9 +25,9 @@
     }
 
     .subtitle {
-      color: #FFF;
+      color: #fff;
       text-align: center;
-      font-family: var(--lato-font-family);
+      font-family: var(--lara-font-family);
       @include adjust-font(20px, false);
       font-style: normal;
       font-weight: 300;
@@ -58,14 +58,14 @@
       margin-top: 3.5rem;
     }
 
-    .contentContainer{
+    .contentContainer {
       margin-top: 7rem;
     }
   }
 }
 
 @media (max-width: 1350px) {
-  .areasAndCommunities {  
+  .areasAndCommunities {
     .top {
       .title {
         @include adjust-font(18px, false);
@@ -88,7 +88,7 @@
 }
 
 @media (max-width: 992px) {
-  .areasAndCommunities {  
+  .areasAndCommunities {
     .top {
       .title {
         @include adjust-font(18px, false);
