--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -7,26 +7,29 @@
 
 html[lang="ar"] * {
   letter-spacing: normal !important;
-    --lato-font-family: Cairo;
-    --audrey-font-family: Cairo;
+  --lara-font-family: Cairo, system-ui, sans-serif;
+  --audrey-font-family: Cairo, system-ui, sans-serif;
 }
 
 :root {
-  --primary-bg-color:#121823;
-  --secondary-bg-color:#141b27;
-  --tertiary-color:rgb(240, 202, 178);
-  --secondary-border-color:#8E8E8E;
-  --dark-blue:#0E141F;
-  --main-heading-color:#71B4E3;
-  --text-color:#fff;
-  --light-text-color:rgb(196, 193, 193);
-  --placeholder-color:#717171;
-  --link-color:#8A8A8A;
-  --lato-font-family:Lato,Helvetica, sans-serif;
-  --audrey-font-family:Audrey,Helvetica, sans-serif;
-  --btn-text-color:#fff;
-  --border-color:#4D5462;
-  --error-color:rgb(254, 100, 111);
+  --primary-bg-color: #121823;
+  --secondary-bg-color: #141b27;
+  --tertiary-color: rgb(240, 202, 178);
+  --secondary-border-color: #8e8e8e;
+  --dark-blue: #0e141f;
+  --main-heading-color: #71b4e3;
+  --text-color: #fff;
+  --light-text-color: rgb(196, 193, 193);
+  --placeholder-color: #717171;
+  --link-color: #8a8a8a;
+
+  /* font stacks */
+  --lara-font-family: Lara, Helvetica, Arial, sans-serif;
+  --audrey-font-family: Audrey, Helvetica, Arial, sans-serif;
+
+  --btn-text-color: #fff;
+  --border-color: #4d5462;
+  --error-color: rgb(254, 100, 111);
 }
 
 a {
@@ -34,90 +37,116 @@ a {
   color: var(--text-color);
 }
 
-button{
+button {
   border: none;
   outline: none;
 }
-
-input{
+input {
   outline: none;
   border: none;
 }
 
-/* lato font  */
+/* =========================
+   LARA font
+========================= */
 @font-face {
-  font-family: "Lato";
+  font-family: "Lara";
+  src: url("../../../assets/fonts/Lara Light.otf") format("opentype");
   font-weight: 300;
-  src: url('../../../assets/fonts/Lato-Light_1.woff') format("woff"), url('../../../assets/fonts/Lato-Light.ttf') format("truetype");
+  font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Lato";
+  font-family: "Lara";
+  src: url("../../../assets/fonts/Lara-Light Italic.otf") format("opentype");
+  font-weight: 300;
+  font-style: italic;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Lara";
+  src: url("../../../assets/fonts/Lara-Book.otf") format("opentype");
   font-weight: 400;
-  src: url('../../../assets/fonts/Lato-Regular_1.woff') format("woff"), url('../../../assets/fonts/Lato-Regular.ttf') format("truetype");
+  font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Lato";
+  font-family: "Lara";
+  src: url("../../../assets/fonts/Lara-Book Italic.otf") format("opentype");
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Lara";
+  src: url("../../../assets/fonts/Lara-Regular.otf") format("opentype");
   font-weight: 500;
-  src: url('../../../assets/fonts/Lato-Medium_1.woff') format("woff"), url('../../../assets/fonts/Lato-Medium.ttf') format("truetype");
+  font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Lato";
-  font-weight: 600;
-  src: url('../../../assets/fonts/Lato-Semibold_1.woff') format("woff"), url('../../../assets/fonts/Lato-Semibold.ttf') format("truetype");
-  font-display: swap;
-}
-@font-face {
-  font-family: "Lato";
-  font-weight: 700;
-  src: url('../../../assets/fonts/Lato-Bold.woff') format("woff"), url('../../../assets/fonts/Lato-Bold.ttf') format("truetype");
+  font-family: "Lara";
+  src: url("../../../assets/fonts/Lara-Regular Italic.otf") format("opentype");
+  font-weight: 500;
+  font-style: italic;
   font-display: swap;
 }
 
-/* Audrey font  */
+/* AUDREY (unchanged) */
 @font-face {
   font-family: "Audrey";
   font-weight: 400;
-  src:url('../../../assets/fonts/Audrey-Normal.woff2') format("woff2"), url('../../../assets/fonts/Audrey-Normal.woff') format("woff"), url('../../../assets/fonts/Audrey-Normal.ttf') format("truetype");
+  src: url("../../../assets/fonts/Audrey-Normal.woff2") format("woff2"),
+    url("../../../assets/fonts/Audrey-Normal.woff") format("woff"),
+    url("../../../assets/fonts/Audrey-Normal.ttf") format("truetype");
   font-display: swap;
 }
 @font-face {
   font-family: "Audrey";
   font-weight: 500;
-  src:url('../../../assets/fonts/Audrey-Medium.woff2') format("woff2"), url('../../../assets/fonts/Audrey-Medium.woff') format("woff"), url('../../../assets/fonts/Audrey-Medium.ttf') format("truetype");
+  src: url("../../../assets/fonts/Audrey-Medium.woff2") format("woff2"),
+    url("../../../assets/fonts/Audrey-Medium.woff") format("woff"),
+    url("../../../assets/fonts/Audrey-Medium.ttf") format("truetype");
   font-display: swap;
 }
 
-h1.mainHeading, h2.mainHeading, h3.mainHeading {
+/* Headings (Audrey) */
+h1.mainHeading,
+h2.mainHeading,
+h3.mainHeading {
   color: var(--main-heading-color);
   font-size: 25px;
   font-family: var(--audrey-font-family);
   text-transform: uppercase;
   font-weight: 700;
   text-align: center;
+}
 
-}
+/* Helpers */
 .gradientText {
-  background: linear-gradient(to right, #F0CAB2 44%, #AC836D 53%);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
+  background: linear-gradient(to right, #f0cab2 44%, #ac836d 53%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
-p{
+
+/* Paragraphs (now Lara) */
+p {
   color: var(--light-text-color);
   font-weight: 300;
   font-size: 14px;
   text-transform: uppercase;
+  font-family: var(--lara-font-family);
 }
-button.globalBtn, a.globalBtn{
-  width: 10rem;
+
+/* Buttons (now Lara) */
+button.globalBtn,
+a.globalBtn {
   width: 13rem;
   padding: 18px 15px;
   background-color: transparent;
   color: var(--btn-text-color);
   letter-spacing: 1.6px;
-  border: 1px solid transparent; /* Set the border width and make it transparent */
+  border: 1px solid transparent;
   border-image: radial-gradient(
     circle,
     rgba(255, 236, 224, 1) 0%,
@@ -128,11 +157,11 @@ button.globalBtn, a.globalBtn{
   font-size: 14px;
   cursor: pointer;
   text-transform: uppercase;
-  font-family: var(--lato-font-family);
+  font-family: var(--lara-font-family);
 }
 
-.gradientBorder{
-  border: 1px solid transparent; /* Set the border width and make it transparent */
+.gradientBorder {
+  border: 1px solid transparent;
   border-image: radial-gradient(
     circle,
     rgba(255, 236, 224, 1) 0%,
@@ -142,68 +171,73 @@ button.globalBtn, a.globalBtn{
   border-image-slice: 1;
 }
 
-.wrapper{
+.wrapper {
   width: 85%;
   margin: 0 auto;
   max-width: 1600px;
 }
-html{
+html {
   scroll-behavior: smooth;
 }
+
 h2.noData {
   text-align: center;
   color: var(--main-heading-color);
-
 }
-body{
-  font-family: var(--lato-font-family);
+
+body {
+  font-family: var(--lara-font-family);
   letter-spacing: 1.6px;
   background-color: var(--secondary-bg-color);
 }
 
-@keyframes fadeIn{
-  0%{
-      opacity: 0;
-  }100%{
-      opacity: 1;
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
 
-@media all and (max-width:768px){
-  h1.mainHeading, h2.mainHeading, h3.mainHeading {
+@media all and (max-width: 768px) {
+  h1.mainHeading,
+  h2.mainHeading,
+  h3.mainHeading {
     font-size: 21px;
   }
 }
-@media all and (max-width:360px){
-  h1.mainHeading, h2.mainHeading, h3.mainHeading {
+@media all and (max-width: 360px) {
+  h1.mainHeading,
+  h2.mainHeading,
+  h3.mainHeading {
     font-size: 16px;
   }
- div.wrapper{
-  width: 95%;
- }
+  div.wrapper {
+    width: 95%;
+  }
 }
+
 .noScroll {
   overflow: hidden;
 }
 
-/* For RTL-specific adjustments */
-[dir='rtl'] {
+/* RTL tweaks */
+[dir="rtl"] {
   flex-direction: row-reverse;
 }
 
 .PhoneInputCountrySelectArrow {
   color: white;
 }
-
 .PhoneInputCountrySelect {
   color: black !important;
 }
 
 .breadcrumb {
   color: white !important;
-  font-family: var(--lato-font-family)
+  font-family: var(--lara-font-family);
 }
-
 .breadcrumb.focus {
   font-weight: 600;
 }
